Update BuildConfig.groovy